/**
 * Communication protocol between Event Managers.
 * @author Krzysztof Trzepla
 * @copyright (C) 2015 ACK CYFRONET AGH
 * @copyright This software is released under the MIT license cited in
 * 'LICENSE.txt'
 */

package one.clproto;

import "common_messages.proto";
import "fuse_messages.proto";

// Generic event message
message Event {
    required uint32 counter = 1; // amount of aggregated events
    oneof event { // list of all event messages
        ReadEvent   read_event   = 2;
        WriteEvent  write_event  = 3;
        UpdateEvent update_event = 4;
    }
}

message ReadEvent {
    required bytes     file_uuid = 1; // UUID of file associated with an event
    required uint64    size      = 2; // amount of read bytes
    repeated FileBlock blocks    = 3; // list of read blocks
}

message WriteEvent {
    required bytes     file_uuid = 1; // UUID of file associated with an event
    optional uint64    file_size = 2; // size of file associated with an event
    required uint64    size      = 3; // amount of written bytes
    repeated FileBlock blocks    = 4; // list of written blocks
}

message UpdateEvent {
    oneof update_event {
        FileAttr     file_attr     = 1;
        FileLocation file_location = 2;
    }
}

// Generic subscription message
message Subscription {
    required int64 id = 1; // unique subscription ID
    oneof event_subscription { // list of all subscription messages
        ReadSubscription         read_subscription          = 2;
        WriteSubscription        write_subscription         = 3;
        FileAttrSubscription     file_attr_subscription     = 4;
        FileLocationSubscription file_location_subscription = 5;
    }
}

message ReadSubscription {
    optional uint32 counter_threshold = 1; // maximal amount of aggregated
                                           // events before emission
    optional uint32 time_threshold    = 2; // maximal delay in milliseconds
                                           // between successive events emission
    optional uint32 size_threshold    = 3; // maximal amount of read bytes
                                           // before emission
}

message WriteSubscription {
    optional uint32 counter_threshold = 1; // maximal amount of aggregated
                                           // events before emission
    optional uint32 time_threshold    = 2; // maximal delay in milliseconds
                                           // between successive events emission
    optional uint32 size_threshold    = 3; // maximal amount of written bytes
                                           // before emission
}

message FileAttrSubscription {
    required bytes  file_uuid         = 1; // file UUID
    optional uint32 counter_threshold = 2; // maximal amount of aggregated
                                           // events before emission
    optional uint32 time_threshold    = 3; // maximal delay in milliseconds
                                           // between successive events emission
}

message FileLocationSubscription {
    required bytes  file_uuid         = 1; // file UUID
    optional uint32 counter_threshold = 2; // maximal amount of aggregated
                                           // events before emission
    optional uint32 time_threshold    = 3; // maximal delay in milliseconds
                                           // between successive events emission
}

message SubscriptionCancellation {
    required int64 id = 1; // ID of subscription to be cancelled
}
